@@ -8,7 +8,7 @@
     from matplotlib import pyplot as plt
     from openturns.viewer import View
     spectralModel = ot.{{ objname }}()
-    if spectralModel.getSpatialDimension() == 1:
+    if spectralModel.getInputDimension() == 1:
         spec_graph = spectralModel.draw(0, 0, True)
         spec_graph.setXTitle('f')
         spec_graph.setYTitle('Spectral Density')
